@@ -15,8 +15,7 @@ namespace Flashcard
 {
     public partial class MainForm : Form
     {
-        private const string DICTIONARY_FILENAME = "ChineseDictionary.txt";
-        private Dictionary<string, Pinyin> dictionary;
+        private ChineseDictionary dictionary;
         private Cards cards;
         private Records records;
         private Point award;
@@ -26,125 +25,105 @@ namespace Flashcard
         {
             InitializeComponent();
             LoadDictionary();
-            loadRecords();
-            loadFlashCards();
-            initializeAward();
-            displayNextCharacter();
+            LoadRecords();
+            LoadFlashCards();
+            InitializeAward();
+            DisplayNextCharacter();
         }
 
         #region initialization
-        /**
-         * Dictionary file format: 
-         *     中 zhong1
-         *     为 wei2/wei4
-         **/
+
         private void LoadDictionary()
         {
-            string[] lines = System.IO.File.ReadAllLines(DICTIONARY_FILENAME, Encoding.UTF8);
-            
-            dictionary = new Dictionary<string,Pinyin>();
-            int i = 0;
-            foreach (string line in lines)
-            {
-                if (String.IsNullOrWhiteSpace(line))
-                {
-                    continue;
-                }
-                string[] values = line.Split(new char[] {' '}, 2);
-                dictionary.Add(values[0], new Pinyin(values[1]));
-                updateStatusBar("Loaded dictionary entry: " + (++i));
-            }
+            dictionary = new ChineseDictionary();
+            dictionary.Load();
+
+            UpdateStatusBar(string.Format("Loaded dictionary entry: {0:D}", dictionary.GetCount()));
         }
 
-        private void loadFlashCards()
+        private void LoadFlashCards()
         {
             cards = new Cards(records);
-            cards.load();
+            cards.Load();
 
             BindingSource source = new BindingSource();
             source.DataSource = Enum.GetValues(typeof(Strategy));
             strategyComboBox.DataSource = source;
-            categoryCheckedListBox.Items.AddRange(cards.getCategoryList().ToArray());
+            categoryCheckedListBox.Items.AddRange(cards.GetCategoryList().ToArray());
             categoryCheckedListBox.SetItemChecked(0, true);
-            createStudyPlan();
+            CreateStudyPlan();
 
-            updateStatusBar(string.Format("Loaded {0} cards", cards.getTotalCardCount()));
+            UpdateStatusBar(string.Format("Loaded {0} cards", cards.GetTotalCardCount()));
         }
 
-        private void loadRecords()
+        private void LoadRecords()
         {
             records = new Records();
-            records.load();
+            records.Load();
         }
 
-        private void initializeAward()
+        private void InitializeAward()
         {
-            award = new Point(History.getLatestPoints());
+            award = new Point(History.GetLatestPoints());
         }
 
         #endregion
 
         #region private methods
 
-        private void createStudyPlan()
+        private void CreateStudyPlan()
         {
             Strategy strategy;
             Enum.TryParse(strategyComboBox.SelectedValue.ToString(), out strategy);
-            cards.createStudyPlan(strategy, getCurrentCategory());
-            updateStatusBar(string.Format("Created study plan: {0}", cards.getStudyPlanCardCount()));
+            cards.CreateStudyPlan(strategy, GetCurrentCategory());
+            UpdateStatusBar(string.Format("Created study plan: {0}", cards.GetStudyPlanCardCount()));
         }
 
-        private void showResult(bool right)
+        private void ShowResult(bool right)
         {
             resultPictureBox.Image = right ? flashcard.Properties.Resources.Right : flashcard.Properties.Resources.Wrong;
             resultPictureBox.Visible = true;
             resultPictureBox.Refresh();
         }
 
-        private Pinyin getCurrentCharacterPinyin()
-        {
-            string character = characterLabel.Text;
-            return dictionary[character];
-        }
-
-        private void clearResult()
+        private void ClearResult()
         {
             pinyinTextBox.Text = "";
             resultPictureBox.Visible = false;
         }
 
-        private string[] getCurrentCategory()
+        private string[] GetCurrentCategory()
         {
             return categoryCheckedListBox.CheckedItems.Cast<string>().ToArray();
         }
 
-        private void displayNextCharacter()
+        private void DisplayNextCharacter()
         {
-            clearResult();
-            hidePinyinHint();
-            characterLabel.Text = cards.getCard();
+            ClearResult();
+            HidePinyinHint();
+            characterLabel.Text = cards.GetCard();
         }
 
-        private void updateStatusBar(string status)
+        private void UpdateStatusBar(string status)
         {
             statusLabel.Text = status;
         }
 
-        private void showPinyinHint()
+        private void ShowPinyinHint()
         {
-            pinyinLabel.Text = getCurrentCharacterPinyin().getPinyinString();
+            pinyinLabel.Text = dictionary.GetPinyinHint(GetCurrentCharacter());
             pinyinLabel.Visible = true;
             pinyinLabel.Refresh();
         }
 
-        private void hidePinyinHint()
+        private void HidePinyinHint()
         {
             pinyinLabel.Visible = false;
         }
 
-        private void updateAward()
+        private void UpdateAward()
         {
-            int points = award.getPoints();
+            int points = award.GetPoints();
             if (points == 0)
             {
                 return;
@@ -155,34 +134,34 @@ namespace Flashcard
             awardMedalPictureBox.Visible = true;
         }
 
-        private char getCurrentCharacter()
+        private char GetCurrentCharacter()
         {
             Debug.Assert(characterLabel.Text != null);
             Debug.Assert(characterLabel.Text.Length == 1);
             return characterLabel.Text[0];
         }
 
-        private void checkResultAndMoveToNext()
+        private void CheckResultAndMoveToNext()
         {
-            showPinyinHint();
-            Pinyin expectedPinyin = getCurrentCharacterPinyin();
-            bool correct = expectedPinyin.match(pinyinTextBox.Text);
-            records.update(getCurrentCharacter(), correct);
-            showResult(correct);
+            ShowPinyinHint();
+            bool correct = dictionary.IsCorrect(GetCurrentCharacter(), pinyinTextBox.Text);
+            records.Update(GetCurrentCharacter(), correct);
+            ShowResult(correct);
+            dictionary.Pronounce(GetCurrentCharacter());
 
             System.Threading.Thread.Sleep(1000);
             if (correct)
             {
-                displayNextCharacter();
-                updateStatusBar(string.Format("Studied {0} words", award.learnOneMore()));
+                DisplayNextCharacter();
+                UpdateStatusBar(string.Format("Studied {0} words", award.LearnOneMore()));
             }
             else
             {
-                clearResult();
+                ClearResult();
             }
         }
 
-        private void setAllCategoryCheckState(CheckState state)
+        private void SetAllCategoryCheckState(CheckState state)
         {
             for (int i = 0; i <= (categoryCheckedListBox.Items.Count - 1); i++)
             {
@@ -196,8 +175,8 @@ namespace Flashcard
 
         private void MainForm_FormClosing(object sender, FormClosingEventArgs e)
         {
-            records.save();
-            History.save(award, startTime);
+            records.Save();
+            History.Save(award, startTime);
         }
 
         private void pinyinTextBox_KeyDown(object sender, KeyEventArgs e)
@@ -207,13 +186,13 @@ namespace Flashcard
                 return;
             }
 
-            checkResultAndMoveToNext();
+            CheckResultAndMoveToNext();
         }
 
         private void tellmeButton_Click(object sender, EventArgs e)
         {
-            showPinyinHint();
-            records.increaseWrongCount(getCurrentCharacter(), 5);
+            ShowPinyinHint();
+            records.IncreaseWrongCount(GetCurrentCharacter(), 5);
         }
 
         private void clockTimer_Tick(object sender, EventArgs e)
@@ -221,23 +200,23 @@ namespace Flashcard
             TimeSpan duration = DateTime.Now - startTime;
             clockLabel.Text = string.Format("{0}:{1:D2}:{2:D2}", duration.Hours, duration.Minutes, duration.Seconds);
             clockLabel.Refresh();
-            updateAward();
+            UpdateAward();
         }
 
         private void allCategoryButton_Click(object sender, EventArgs e)
         {
-            setAllCategoryCheckState(CheckState.Checked);
+            SetAllCategoryCheckState(CheckState.Checked);
         }
 
         private void noneCategoryButton_Click(object sender, EventArgs e)
         {
-            setAllCategoryCheckState(CheckState.Unchecked);
+            SetAllCategoryCheckState(CheckState.Unchecked);
         }
 
         private void startButton_Click(object sender, EventArgs e)
         {
-            createStudyPlan();
-            displayNextCharacter();
+            CreateStudyPlan();
+            DisplayNextCharacter();
         }
 
         #endregion
